1.6/_sources/modules/generated/sklearn.semi_supervised.SelfTrainingClassifier.rst.txt
SelfTrainingClassifier
======================

.. currentmodule:: sklearn.semi_supervised

.. autoclass:: SelfTrainingClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.semi_supervised.SelfTrainingClassifier sklearn.semi_supervised.SelfTrainingClassifier.__init__ sklearn.semi_supervised.SelfTrainingClassifier.decision_function sklearn.semi_supervised.SelfTrainingClassifier.fit sklearn.semi_supervised.SelfTrainingClassifier.get_metadata_routing sklearn.semi_supervised.SelfTrainingClassifier.get_params sklearn.semi_supervised.SelfTrainingClassifier.predict sklearn.semi_supervised.SelfTrainingClassifier.predict_log_proba sklearn.semi_supervised.SelfTrainingClassifier.predict_proba sklearn.semi_supervised.SelfTrainingClassifier.score sklearn.semi_supervised.SelfTrainingClassifier.set_params 
   :add-heading: Gallery examples
   :heading-level: -