1.7/_sources/modules/generated/sklearn.semi_supervised.SelfTrainingClassifier.rst.txt
SelfTrainingClassifier
======================

.. currentmodule:: sklearn.semi_supervised

.. autoclass:: SelfTrainingClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.semi_supervised.SelfTrainingClassifier sklearn.semi_supervised.SelfTrainingClassifier.__delattr__ sklearn.semi_supervised.SelfTrainingClassifier.__dir__ sklearn.semi_supervised.SelfTrainingClassifier.__eq__ sklearn.semi_supervised.SelfTrainingClassifier.__format__ sklearn.semi_supervised.SelfTrainingClassifier.__ge__ sklearn.semi_supervised.SelfTrainingClassifier.__getattribute__ sklearn.semi_supervised.SelfTrainingClassifier.__getstate__ sklearn.semi_supervised.SelfTrainingClassifier.__gt__ sklearn.semi_supervised.SelfTrainingClassifier.__hash__ sklearn.semi_supervised.SelfTrainingClassifier.__init__ sklearn.semi_supervised.SelfTrainingClassifier.__init_subclass__ sklearn.semi_supervised.SelfTrainingClassifier.__le__ sklearn.semi_supervised.SelfTrainingClassifier.__lt__ sklearn.semi_supervised.SelfTrainingClassifier.__ne__ sklearn.semi_supervised.SelfTrainingClassifier.__new__ sklearn.semi_supervised.SelfTrainingClassifier.__reduce__ sklearn.semi_supervised.SelfTrainingClassifier.__reduce_ex__ sklearn.semi_supervised.SelfTrainingClassifier.__repr__ sklearn.semi_supervised.SelfTrainingClassifier.__setattr__ sklearn.semi_supervised.SelfTrainingClassifier.__setstate__ sklearn.semi_supervised.SelfTrainingClassifier.__sizeof__ sklearn.semi_supervised.SelfTrainingClassifier.__sklearn_clone__ sklearn.semi_supervised.SelfTrainingClassifier.__sklearn_tags__ sklearn.semi_supervised.SelfTrainingClassifier.__str__ sklearn.semi_supervised.SelfTrainingClassifier.__subclasshook__ sklearn.semi_supervised.SelfTrainingClassifier._build_request_for_signature sklearn.semi_supervised.SelfTrainingClassifier._get_default_requests sklearn.semi_supervised.SelfTrainingClassifier._get_doc_link sklearn.semi_supervised.SelfTrainingClassifier._get_estimator sklearn.semi_supervised.SelfTrainingClassifier._get_metadata_request sklearn.semi_supervised.SelfTrainingClassifier._get_param_names sklearn.semi_supervised.SelfTrainingClassifier._get_params_html sklearn.semi_supervised.SelfTrainingClassifier._html_repr sklearn.semi_supervised.SelfTrainingClassifier._repr_html_inner sklearn.semi_supervised.SelfTrainingClassifier._repr_mimebundle_ sklearn.semi_supervised.SelfTrainingClassifier._validate_params sklearn.semi_supervised.SelfTrainingClassifier.decision_function sklearn.semi_supervised.SelfTrainingClassifier.fit sklearn.semi_supervised.SelfTrainingClassifier.get_metadata_routing sklearn.semi_supervised.SelfTrainingClassifier.get_params sklearn.semi_supervised.SelfTrainingClassifier.predict sklearn.semi_supervised.SelfTrainingClassifier.predict_log_proba sklearn.semi_supervised.SelfTrainingClassifier.predict_proba sklearn.semi_supervised.SelfTrainingClassifier.score sklearn.semi_supervised.SelfTrainingClassifier.set_params 
   :add-heading: Gallery examples
   :heading-level: -